@@ -1,6 +1,7 @@
 Next release
 ============
 
+* ENH: New interfaces for MRTrix3 (https://github.com/nipy/nipype/pull/1126)
 * FIX: Enable absolute path definitions in DCMStack (https://github.com/nipy/nipype/pull/1089,
        replaced by https://github.com/nipy/nipype/pull/1093)
 * ENH: New mesh.MeshWarpMaths to operate on surface-defined warpings
